@@ -1,26 +1,21 @@
 package util.kerberos.messages;
 
-import java.io.ByteArrayInputStream;
-import java.io.IOException;
 import java.security.InvalidKeyException;
 import java.security.Key;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidKeySpecException;
 import java.util.Base64;
 
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
-import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.bind.DatatypeConverter;
 
 import org.apache.commons.lang3.SystemUtils;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
-import org.xml.sax.SAXException;
 
 import util.kerberos.Kerberos;
 import util.kerberos.exception.KerberosException;
 
-/*
+/**
  * Authentication - Used to authenticate server in
  * first kerberos round trip.
  */
@@ -31,12 +26,12 @@ public class KerberosServerAuthentication extends KerberosCypheredMessage{
 	
 	private Key kcs;
 	
-	private String nounce;
+	private String nonce;
 	
 	
-	public KerberosServerAuthentication(Key kcs,String nounce){
+	public KerberosServerAuthentication(Key kcs,String nonce){
 		this.kcs = kcs;
-		this.nounce = nounce;
+		this.nonce = nonce;
 	}
 	
 	/**
@@ -49,19 +44,19 @@ public class KerberosServerAuthentication extends KerberosCypheredMessage{
 	/**
 	 * @return the nouce
 	 */
-	public String getNounce() {
-		return nounce;
+	public String getNonce() {
+		return nonce;
 	}
 	
 	@Override
 	public byte[] serialize(Key kc) throws KerberosException {
 		String authentication,body = "";
-		body += "<nounce>"+ nounce + "</nounce>";
-		body += "<cliServKey>" + Base64.getEncoder().encodeToString(kcs.getEncoded()) +"</cliServKey>";
+		body += "<nounce>"+ nonce + "</nounce>";
+		body += "<cliServKey>" + DatatypeConverter.printBase64Binary(kcs.getEncoded()) +"</cliServKey>";
 		authentication = "<authentication>" + body + "</authentication>";
 		
 		try{
-			return Kerberos.cipherText(kc, authentication.getBytes("UTF-8"));
+			return Kerberos.cipherText(kc, authentication.getBytes(UTF8));
 		}
 		catch(Exception e){
 			throw new KerberosException();
@@ -73,27 +68,23 @@ public class KerberosServerAuthentication extends KerberosCypheredMessage{
 			throws KerberosException{
 		try{
 			byte[] plainAuth = Kerberos.decipherText(k, auth);
-			String authentication = new String(plainAuth,"UTF-8");
-			
-			return parseTicket(authentication);
+			return parseTicket(plainAuth);
 		}catch(Exception e){
 			throw new KerberosException();
 		}
 	}
 	
-	private static KerberosServerAuthentication parseTicket(String auth) 
-	throws KerberosException{
+	private static KerberosServerAuthentication parseTicket(byte[] auth) 
+	throws KerberosException {
 		
 		String n = "",k = "",dirFile = "";
 		try{
-			DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-	        DocumentBuilder builder = factory.newDocumentBuilder();
-			Document document;
-			document = builder.parse(new ByteArrayInputStream(auth.getBytes()));
+			Document document = getXMLDocumentFromBytes(auth);
 			
 			if(SystemUtils.IS_OS_WINDOWS)
 	        	dirFile = System.getProperty("user.dir") + XSD_FILE_WINDOWS_PATH;
-	        else if(SystemUtils.IS_OS_LINUX)
+	        else if(SystemUtils.IS_OS_LINUX || SystemUtils.IS_OS_MAC 
+	        		||SystemUtils.IS_OS_MAC_OSX )
 	        	dirFile = System.getProperty("user.dir") + XSD_FILE_LINUX_PATH;
 			validateXMLDocument(document,dirFile);
 			
@@ -111,14 +102,7 @@ public class KerberosServerAuthentication extends KerberosCypheredMessage{
 			byte[] decodedKcs =  Base64.getDecoder().decode(k);
 			Key key = Kerberos.getKeyFromBytes(decodedKcs);
 			return new KerberosServerAuthentication(key, n);
-		}
-		catch(SAXException e){
-			throw new KerberosException();
-		}catch(IOException e){
-			throw new KerberosException();
-		}catch(ParserConfigurationException e){
-			throw new KerberosException();
-		} catch (InvalidKeyException e) {
+		}catch (InvalidKeyException e) {
 			throw new KerberosException();
 		} catch (InvalidKeySpecException e) {
 			throw new KerberosException();
